--- a/Irregular-occ/references.bib
+++ b/Irregular-occ/references.bib
@@ -152,6 +152,20 @@ month={Mar},
 pages={1962–1976}
 }
 
+@article{Peng2008,
+title={New evidence of precision premium for Galilean satellites from CCD imaging},
+volume={56},
+url={http://dx.doi.org/10.1016/j.pss.2008.02.020},
+DOI={10.1016/j.pss.2008.02.020},
+number={14},
+journal={Planetary and Space Science},
+publisher={Elsevier BV},
+author={Peng, Q.Y. and Vienne, A. and Lainey, V. and Noyelles, B.},
+year={2008},
+month={Nov},
+pages={1807–1811}
+}
+
 @article{Assafin2010,
 title={Precise predictions of stellar occultations by Pluto, Charon, Nix, and Hydra for 2008–2015},
 volume={515},
