adicionado comentarios Marcelo 04-08-2015, fiz secoes 1 a 3

--- a/Irregular-occ/Irregular-occ.tex
+++ b/Irregular-occ/Irregular-occ.tex
@@ -58,7 +58,7 @@
 
 \begin{document}
 
-\title{Predictions of stellar occultations of 9 irregular satellites of giant planets
+\title{Stellar occultation predictions for  9 irregular satellites of giant planets for 2015-2016
 %\fnmsep\thanks{Table 8 are only available in electronic form at the CDS via anonymous ftp to cdsarc.u-strasbg.fr (130.79.128.5) or via http://cdsweb.u-strasbg.fr/cgi-bin/qcat?J/A+A/ and IAU NSDC data base at www.imcce.fr/nsdc.}
 %\fnmsep\thanks{The complete version of Table 8 is available through CDS and IAU NSDC data base at www.imcce.fr/nsdc.}
 %\fnmsep\thanks{Partially based on observations made at Laborat\'orio Nacional de Astrof\'{\i}sica (LNA), Itajub\'a-MG, Brazil.}
@@ -140,7 +140,7 @@ Laboratório Interinstitucional de e-Astronomia - LIneA, Rua Gal. José Cristino
 
 \section{Introduction} \label{Sec: introducao} 
 
-Irregular satellites, also known as outer satellites, of the giant planets are objects orbiting the planets from a distant, eccentric and highly inclined orbit, most of them are retrograde. Because of these peculiar orbits, it is largely accepted that these objects were captured by their planets in the early solar system \citep{Sheppard2005}.
+Irregular (outer) satellites revolve around giant planets at large distances in eccentric, highly inclined and frequently retrograde orbits. Because of these peculiar orbits, it is largely accepted that these objects were not originated with, but were captured by their planets in the early solar system \citep{Sheppard2005}.
 
 There is a number of capture mechanisms of objects by giant planets proposed in the literature. There is the Gas Drag in the primordial circumplanetary nebulae \citep{Sheppard2005} where the object would be affected by the gas drag and its velocity slowed down until it be captured by the planet. Another mechanism is called pull-down capture \citep{Sheppard2005}, where the mass of the planet would increase while the object was temporarily captured. 
 
@@ -148,27 +148,35 @@ A mechanism based in the Nice model \citep{Morbidelli2005, Tsiganis2005, Gomes20
 
 Another important mechanism is the capture through collisional interactions \citep{Sheppard2005}. A collision between two small bodies in the Hill's sphere of the planet could generate fragmented objects and the dissipated energy could be such that some of these objects could be captured.
 
-Some of these objects are in dynamical groups with similar orbital elements, called families, similar to families found in the Main Asteroid Belt. These families may have been created by a parent body disrupted by collisions with comets or other satellites \citep{Nesvorny2004}. Collisions with comets are more likely to have occurred during the Late Heavy Bombardment (LHB) \citep{Gomes2005}.
+Some of these objects are in dynamical groups with similar orbital elements, called families, similar to families found in the Main Asteroid Belt. These families may have been created by a parent body disrupted by collisions with comets or other satellites \citep{Nesvorny2004}. Collisions with comets are more likely to have occurred during the LHB \citep{Gomes2005}.
 
-\cite{Nesvorny2003} studied the collision rates between irregular satellites and concluded that some satellites could have been removed by collision with a bigger satellite. The rate collision between satellites of the Himalia Group (Himalia, Elara, Lysithea and Leda, mainly), for instance, was found to be more than one during the solar system age suggesting that their current structure was originated by satellite-satellite collision.
+\cite{Nesvorny2003} studied the collision rates between irregular satellites and concluded that some satellites could have been removed by collision with a bigger satellite. The collision rate between satellites of the Himalia Group (Himalia, Elara, Lysithea and Leda, mainly), for instance, was found to be more than one during the solar system age suggesting that their current structure was originated by satellite-satellite collision.
 
 For Phoebe, ejected material from its surface caused by impacts could evolve due to Poynting-Robertson drag and collide with Iapetus causing the large variation in albedo observed on it \citep{Nesvorny2003}. Indeed, Cassini was able to detected in Phoebe an absorption feature at 2.42 $\mu m$ (probably CN combinations) that was also detected in the dark side of Iapetus \citep{Clark2005}.
 
-The region of origin of these object is not well known, \cite{Grav2003} and \cite{Grav2007} showed that the irregular satellites from the giant planest have their colors and spectral slopes similar to C-, D- and P-type asteroids, Centaurs and trans-neptunian objects (TNOs) suggesting that they have been originated from different locations in the early solar system.
+The region of origin of these object is not well known. \cite{Grav2003} and \cite{Grav2007} showed that the irregular satellites from the giant planets have their colors and spectral slopes similar to C-, D- and P-type asteroids, Centaurs and trans-neptunian objects (TNOs) suggesting that they have been originated from different locations in the early solar system.
 
-In this work, we study these objects as possible representatives of the small TNOs population. TNOs are objects that due to their distance may be highly preserved having their properties similar to those they had when they were formed, then providing history and evolution of the outer solar system \citep{Camargo2013}. Due to their distance, the smaller objects from this region are more difficult to observe and study.
+In this work, we propose to study these objects as possible representatives of the small TNOs' population. The basis for this hypothesis is discussed in Section \ref{Sec: Rationale}. TNOs are highly interesting objects that due to their large heliocentric distances (low temperatures) may be highly preserved having their physical properties similar to those they had when they were formed, then providing history and evolution of the outer solar system \citep{Camargo2013}. This is even more true for the smaller objects, since in principle larger sizes favour physical differentiation processes in the body and vice-versa. However, due to the distance, the smaller TNOs from this region are more difficult to observe. A clever way to overcome this difficulty is to study  the much closer irregular satellites, under the hypothesis that they share a common origin with the small TNOs' population.
 
-In the intent to obtain the physical parameters (size, shape, albedo, density, etc) of the irregular satellites and help identify their origin locations, we will make use of the stellar occultation technique. This technique is the best one to obtain these parameters of the solar system objects from ground-based observations providing more accurate results than other ground-based techniques \citep{Sicardy2011, Ortiz2012, Braga-Ribas2014}.
+In order to obtain precise fundamental physical parameters like size, shape and albedo for the irregular satellites (and thus, in a sense, to small-sized TNOs), we will make use of stellar occultations, which provide  more accurate results than other ground-based techniques \citep{Sicardy2011, Ortiz2012, Braga-Ribas2014}.
 
-Since their estimated sizes are very small (see table \ref{} \textcolor{red}{Ainda vou fazer a tabela}), predict the exact location and instant where the shadow will cross the Earth demands a good precision. For instance, the bigger irregular satellite of Jupiter has an estimated size of 150 km \citep{Porco2003}, which is equivalent to an apparent size of 40 mas, must have an error smaller than its size for being observable. For the other objects, smaller or farther than Himalia, the situation is more difficult.
+Up to date no stellar occultation by irregular satellite is found in the literature. Since their estimated sizes are very small (see table \ref{} \textcolor{red}{Ainda vou fazer a tabela}), prediction of the exact location and instant where the shadow will cross the Earth demands a good accurate ephemeris and star positions. For instance, Himalia, supposedly the largest irregular satellite of Jupiter has an estimated size of 150 km \citep{Porco2003}, which is equivalent to an apparent size of about 40 mas( milliarcseconds).Thus, even in the best cases, the overall budget of ephemeris and star position errors must be around 40 mas in order that we get good chances of observing a stellar occultation. \textcolor{red}{aqui poderia dizer alguma coisa do outro lado da moeda, do lado bom  das condicoes mais favoraveis em relacao a TNOs. (ver comentario que fiz da Secao 2)}
 
-As pointed out by \cite{GomesJunior2015}, the ephemeris of the irregular satellites have errors that may reach 200 mas for some satellites. For an object at the distance of Jupiter, this represents an error bigger than 700 km in the shadow path.
+As pointed out by \cite{GomesJunior2015}, the ephemeris of the irregular satellites have errors that may reach 200 mas for some satellites. For an object at the distance of Jupiter, this represents an error bigger than 700 km in the shadow path. \textcolor{red}{Falar mais de Gomes-Junior 2015, dando a base para que o presente trabalho de predicoes pudesse ser feito. Falar que foram feitas XXXX posicoes de NN satelites com precisoes medias de YYY, possibiitando corrigir efeitos sistematicos nas efemerides, e com isso tornando possivel fazer predicoes com chances razoaveis de exito.}
 
-We present in this paper the stellar occultation predictions for the 7 major irregular satellites of Jupiter (Himalia, Elara, Pasiphae, Lysithea, Carme, Ananke and Sinope), Phoebe from Saturn and Triton and Nereid from Neptune. In the section \ref{Sec: Rationale} we explore the scientific rationale for study the irregular satellites and the possibility of having a common origin with TNOs. In section \ref{Sec: Offset} we show the correction made to the ephemeris for better predict stellar occultations. In section \ref{Sec: predictions}, we present the predictions of the stellar occultations by irregular satellites and how they were made. Some test realized to confirm the predictions are presented in section \ref{Sec: testes} and the conclusion is given in section \ref{Sec: conclusions}.
+We present in this paper stellar occultation predictions for the 7 major irregular satellites of Jupiter (Himalia, Elara, Pasiphae, Lysithea, Carme, Ananke and Sinope), Phoebe from Saturn and Nereid from Neptune. In the section \ref{Sec: Rationale} we explore the scientific rationale for the study of the irregular satellites and the possibility of having a common origin with TNOs. In section \ref{Sec: Offset} we show the correction made to the ephemeris of these satellites for better predicting the stellar occultations. In section \ref{Sec: predictions}, we present the predictions of the stellar occultations by irregular satellites and how they were made. Some tests made to confirm the predictions are presented in section \ref{Sec: testes} and the conclusions are given in section \ref{Sec: conclusions}.
 
 \section{Scientific Rationale} \label{Sec: Rationale}
 
-As explicited in section \ref{Sec: introducao}, there is no consensus on a single model about the region where the irregular satellites were formed. In this work we treat them as having a common origin to the Centaurs and TNOs. In this case, they would be the representative objects of the small TNOs population. Since that small objects at great distances are difficult to study, the irregular satellites can complement this gap.
+\textcolor{red}{Como pode ver, comparado ao paragrafo na Introducao que falou a respeito, o texto aqui está muito pequeno e chovendo no molhado.}
+
+\textcolor{red}{Tem que falar mais. Citar o paper no livro da Barucci que voce me mostrou outro dia. Dar mais citacoes sobre essa hipotese. Falar dos albedos parecidos, cores. Tem que fundamentar a hipotese de irregulares = TNOs pequenos.}
+
+\textcolor{red}{Tambem falar aqui das vantagens de se observar ocultacoes dos irregulares, porque apesar de alguns satelites terem efemerides ruins, outros nem tanto, as efemerides sao melhores que a de TNOs (os irregulares ja completaram voltas em torno dos seus planetas); no caso de Jupiter, ele esta proximo o que ajuda a diminuir o erro em km.}
+
+
+\textcolor{red}{E dizer que, mesmo que a hipotese de TNOs que nos motiva a fazer as predicoes, venha a ser refutada no futuro, seja por outros trabalhos, seja pelos resultados futuros de observacoes de nossas proprias ocultacoes, o levantamento em si das propriedades fisicas, tamanho, forma e albedo ainda assim seriam muito uteis para testar as hiposteses de captura, ou seja, contribui para o estudo da formacao e evolucao dos sistemas de Jupiter, Saturno e Netuno.}
+%As explicited in section \ref{Sec: introducao}, there is no consensus on a single model about the region where the irregular satellites were formed. In this work we treat them as having a common origin to the Centaurs and TNOs. In this case, they would be the representative objects of the small TNOs population. Since that small objects at great distances are difficult to study, the irregular satellites can complement this gap.
 
 %This idea is supported by the 
 
@@ -188,9 +196,9 @@ As explicited in section \ref{Sec: introducao}, there is no consensus on a singl
 
 \section{Correction of the ephemeris} \label{Sec: Offset}
 
-\cite{GomesJunior2015} showed from observations made at the Observatório do Pico dos Dias (OPD), Observatoire Haute-Provence (OHP) and European Southern Observatory (ESO) that the orbits of the irregular satellites of the giant planets have systematic errors. The offsets of the observations relative to the JPL ephemeris could be up to 200 mas for some satellites. These differences could be associated with errors in their orbital elements.
+\cite{GomesJunior2015} \textcolor{red}{published XXXX precise positions for NNN irregular satellites from 1992-2015} from observations made at the Observatório do Pico dos Dias (OPD), Observatoire Haute-Provence (OHP) and European Southern Observatory (ESO). They showed that the orbits of the irregular satellites of the giant planets have systematic errors. The offsets of the observations relative to the JPL ephemeris could be up to 200 mas for some satellites. These differences could be associated with errors in their orbital elements.
 
-Making a new model for the orbits of these objects would demand a lot of time and delay the publication of these predictions. Then we utilize the offsets obtained by \cite{GomesJunior2015} to identify a pattern in the error of the ephemeris. This pattern could be used to extrapolate an offset to the satellite ephemeris by the time of the occultation predicted. Plots of the offsets over time and true anomaly (see Fig. \ref{Fig:offxtime} and \ref{Fig:offxtanom} for Carme) clearly show the systematic error in the JPL ephemeris.
+Making a new model for the orbits of these objects would demand a lot of time and delay the publication of predictions of possible events to occur in the very near future. Thus, we utilized the ephemeris offsets obtained by \cite{GomesJunior2015} to identify error patterns in the ephemeris. The error patterns in right ascension and in declination could be used to extrapolate the offsets to the satellite ephemeris by the time of the predicted occultation, improving it. Plots of the offsets over time and true anomaly (see Fig. \ref{Fig:offxtime} and \ref{Fig:offxtanom} for Carme) clearly show the systematic errors in the JPL ephemeris.
 
 \begin{figure}
 \begin{centering}
@@ -207,6 +215,7 @@ Making a new model for the orbits of these objects would demand a lot of time an
 \end{figure}
 
 
+The two kinds of error or offset patterns adopted depending on the case are given by Eqs. \ref{eq:linear} and \ref{eq:seno}:
 
 \begin{equation}
 F(t,f) = p[0]\times t + p[1]\times \sin(f) + p[2]\times\cos(f) + p[3],
@@ -220,8 +229,9 @@ F(t,f) = p[0]\times t + p[1]\times \sin(f) + p[2]\times\cos(f) + p[3],
 % &\quad \cap (|S_{\text{conected}}| > |S| - \epsilon) \}
 F(t,f) = p[0]\times\sin\left(\frac{2\pi}{p[1]}\times t + p[2]\right) + p[3]\times\sin(f) + \\ +p[4]\times\cos(f) + p[5],
 \end{split}
+\label{eq:seno}
 \end{equation}
-where $F(t,f)$ is the offset obtained, $t$ is time in years counting from J2000.0 and $f$ is the true anomaly.
+where $F(t,f)$ is the offset obtained, $t$ is time in years counting from J2000.0 and $f$ is the true anomaly. The patterns could be applied for right ascension as well as for declination ephemeris offsets.
 
 \textcolor{red}{Falta justificar as funções}
 
