--- a/Irregular-occ/Irregular-occ.tex
+++ b/Irregular-occ/Irregular-occ.tex
@@ -50,7 +50,7 @@
 {\def\hyper@linkstart##1##2{}%
 \let\hyper@linkend\@empty\citeyear[#1][#2]{#3}}}
 \makeatother
-\titlerunning{Predictions of stellar occultations by irregular satellites}
+\titlerunning{Predictions of stellar occultations by irregular satellites up to 2017}
 \authorrunning{Gomes-Júnior et al.}
 
 \makeatother
@@ -58,7 +58,7 @@
 
 \begin{document}
 
-\title{Stellar occultation predictions for  9 irregular satellites of giant planets for 2015-2016
+\title{Stellar occultation predictions for  9 irregular satellites of giant planets for 2015-2017
 %\fnmsep\thanks{Table 8 are only available in electronic form at the CDS via anonymous ftp to cdsarc.u-strasbg.fr (130.79.128.5) or via http://cdsweb.u-strasbg.fr/cgi-bin/qcat?J/A+A/ and IAU NSDC data base at www.imcce.fr/nsdc.}
 %\fnmsep\thanks{The complete version of Table 8 is available through CDS and IAU NSDC data base at www.imcce.fr/nsdc.}
 %\fnmsep\thanks{Partially based on observations made at Laborat\'orio Nacional de Astrof\'{\i}sica (LNA), Itajub\'a-MG, Brazil.}
