--- a/Irregular-occ/Irregular-occ.tex
+++ b/Irregular-occ/Irregular-occ.tex
@@ -281,6 +281,8 @@ d m Year & h m s & \multicolumn{2}{c}{RA (ICRS) Dec} & C/A & P/A & v & D & R* & 
 \end{centering}
 \end{figure}
 
+The GAIA catalogue is expected to be released in the end of 2016. It will provide precise positions for the stars and the only source of error in the prediction of an occultation will be the satellite ephemeris. The occultations from 2017
+
 \textcolor{red}{Acrescentar um paragrafo falando do GAIA, cujo primeiro release esta previsto para fins de 2016. Falar que seremos capazes de refazer o trabalho de Gomes-Junior 2015 e com posicoes de estrelas GAIA poderemos predizer melhor os eventos de 2017 em diante. Mas por questao de precaucao e de preparo futuro para campanhas, publicamos ate fim de 2017 com o UCAC4.}
 
 
