--- a/Irregular-occ/Irregular-occ.tex
+++ b/Irregular-occ/Irregular-occ.tex
@@ -160,9 +160,11 @@ In this work, we propose to study these objects as possible representatives of t
 
 In order to obtain precise fundamental physical parameters like size, shape and albedo for the irregular satellites (and thus, in a sense, to small-sized TNOs), we will make use of stellar occultations, which provide  more accurate results than other ground-based techniques \citep{Sicardy2011, Ortiz2012, Braga-Ribas2014}.
 
-Up to date no stellar occultation by irregular satellite is found in the literature. Since their estimated sizes are very small (see table \ref{} \textcolor{red}{Ainda vou fazer a tabela}), prediction of the exact location and instant where the shadow will cross the Earth demands a good accurate ephemeris and star positions. For instance, Himalia, supposedly the largest irregular satellite of Jupiter has an estimated size of 150 km \citep{Porco2003}, which is equivalent to an apparent size of about 40 mas( milliarcseconds).Thus, even in the best cases, the overall budget of ephemeris and star position errors must be around 40 mas in order that we get good chances of observing a stellar occultation. \textcolor{red}{aqui poderia dizer alguma coisa do outro lado da moeda, do lado bom  das condicoes mais favoraveis em relacao a TNOs. (ver comentario que fiz da Secao 2)}
+Up to date no stellar occultation by irregular satellite is found in the literature. Since their estimated sizes are very small (see table \ref{} \textcolor{red}{Ainda vou fazer a tabela}), prediction of the exact location and instant where the shadow will cross the Earth demands a good accurate ephemeris and star positions. For instance, Himalia, supposedly the largest irregular satellite of Jupiter has an estimated size of 150 km \citep{Porco2003}, which is equivalent to an apparent size of about 40 mas (milliarcseconds).Thus, even in the best cases, the overall budget of ephemeris and star position errors must be around 40 mas in order that we get good chances of observing a stellar occultation.
 
-As pointed out by \cite{GomesJunior2015}, the ephemeris of the irregular satellites have errors that may reach 200 mas for some satellites. For an object at the distance of Jupiter, this represents an error bigger than 700 km in the shadow path. \textcolor{red}{Falar mais de Gomes-Junior 2015, dando a base para que o presente trabalho de predicoes pudesse ser feito. Falar que foram feitas XXXX posicoes de NN satelites com precisoes medias de YYY, possibiitando corrigir efeitos sistematicos nas efemerides, e com isso tornando possivel fazer predicoes com chances razoaveis de exito.}
+Unlikely stellar occultations by TNOs, which has been proved effective, the observation of an occultation by a irregular satellite is more favorable. They have been known for more time and observed in many orbital period having better ephemeris than TNOs. Moreover, the irregular satellites are closer to Earth which means a minor error in kilometers.
+
+\cite{GomesJunior2015} obtained 6523 suitable positions for 18 irregular satellites between 1992 and 2014 with an estimated error in the positions of about 60 to 80 mas. For some satellites the number of positions obtained is comparable to the number used in the numerical integration of orbits by the JPL \citep{Jacobson2012}. They pointed out that the ephemeris of the irregular satellites have systematic errors that may reach 200 mas for some satellites. For an object at the distance of Jupiter, this represents an error bigger than 700 km in the shadow path. Using the offsets obtained by \cite{GomesJunior2015} it is possible to correct the ephemeris and better predict stellar occultations for these objects.
 
 We present in this paper stellar occultation predictions for the 7 major irregular satellites of Jupiter (Himalia, Elara, Pasiphae, Lysithea, Carme, Ananke and Sinope), Phoebe from Saturn and Nereid from Neptune. In the section \ref{Sec: Rationale} we explore the scientific rationale for the study of the irregular satellites and the possibility of having a common origin with TNOs. In section \ref{Sec: Offset} we show the correction made to the ephemeris of these satellites for better predicting the stellar occultations. In section \ref{Sec: predictions}, we present the predictions of the stellar occultations by irregular satellites and how they were made. Some tests made to confirm the predictions are presented in section \ref{Sec: testes} and the conclusions are given in section \ref{Sec: conclusions}.
 
@@ -281,9 +283,7 @@ d m Year & h m s & \multicolumn{2}{c}{RA (ICRS) Dec} & C/A & P/A & v & D & R* & 
 \end{centering}
 \end{figure}
 
-The GAIA catalogue is expected to be released in the end of 2016. It will provide precise positions for the stars and the only source of error in the prediction of an occultation will be the satellite ephemeris. The occultations from 2017
-
-\textcolor{red}{Acrescentar um paragrafo falando do GAIA, cujo primeiro release esta previsto para fins de 2016. Falar que seremos capazes de refazer o trabalho de Gomes-Junior 2015 e com posicoes de estrelas GAIA poderemos predizer melhor os eventos de 2017 em diante. Mas por questao de precaucao e de preparo futuro para campanhas, publicamos ate fim de 2017 com o UCAC4.}
+The ESA astrometry satellite GAIA \citep{deBruijne2012} catalogue is expected to be released in the end of 2016. The precise star positions to be derived by GAIA will render better predictions with the only source of error being the ephemeris. The work of \cite{GomesJunior2015} will be revised with the GAIA catalogue and the predictions from 2017 onwards will be better predicted. For a matter of precaution and preparations of campaigns, we publish stellar occultations with UCAC4 until 2017.
 
 
 \section{Occultation tests} \label{Sec: testes}
@@ -294,7 +294,7 @@ The tests consisted in observing the object and star to be occulted near the eve
 
 Two occultation tests were performed, one by Himalia that occurred on March 3, 2015 and the second by Elara that occurred on March 30, 2015. For each event, four situations were considered: the first with the nominal positions of the star and the satellite to the predicted time; the second with the offset calculated as described in section \ref{Sec: Offset}; the third with star and satellite offsets from observations made a few days before the occultation when the two objects were separated (different FOV); and the fourth from observations made when the star and the satellite were close in the same FOV.
 
-Figure \ref{Fig: occ-Himalia}shows four zoomed in occultation maps corresponding to each of the four situations for Himalia.. The map \ref{Fig: occ-Himalia-nooff} is the nominal prediction with the coordinate of the star given by the catalogue and that of the satellite from the ephemeris. We then corrected the positions of the satellite by an offset calculated by the method showed in section \ref{Sec: Offset} to make the map \ref{Fig: occ-Himalia-ajuste}. The map \ref{Fig: occ-Himalia-off22fev} was made from obtained positions on February 22 observed with the Zeiss telescope \textcolor{red}{dar informacoes do Zeiss, diametro, FOV em arcmin, pixel scale} at the Observatório do Pico dos Dias (OPD). On that day, Himalia and the star were observed in separate FOVs as they were still far apart. On the night of the event, March 3, the objects were observed with Perkin-Elmer telescope \textcolor{red}{dar as mesmas infos, agora para o 1.6m} at OPD just over an hour after the time scheduled for the event. Satellite and star were separated by about 16 arcsec, so very close to each other. From the calculated offsets, the map \ref{Fig: occ-Himalia-off03mar} was generated. Notice that the shadow path was not predicted to cross the OPD. This was not necessary for testing the prediction.
+Figure \ref{Fig: occ-Himalia}shows four zoomed in occultation maps corresponding to each of the four situations for Himalia.. The map \ref{Fig: occ-Himalia-nooff} is the nominal prediction with the coordinate of the star given by the catalogue and that of the satellite from the ephemeris. We then corrected the positions of the satellite by an offset calculated by the method showed in section \ref{Sec: Offset} to make the map \ref{Fig: occ-Himalia-ajuste}. The map \ref{Fig: occ-Himalia-off22fev} was made from obtained positions on February 22 observed with the Zeiss telescope (Diameter = 0.6m; FOV = $12\farcm6$; pixel scale = $0\farcs37 / px$) at the Observatório do Pico dos Dias (OPD, IAU code 874, 45\degr 34\arcmin 57\arcsec W, 22\degr 32\arcmin 04\arcsec S, 1864m). On that day, Himalia and the star were observed in separate FOVs as they were still far apart. On the night of the event, March 3, the objects were observed with Perkin-Elmer telescope (Diameter = 1.6m; FOV = $5\farcm8$; pixel scale = $0\farcs17 / px$) at OPD just over an hour after the time scheduled for the event. Satellite and star were separated by about 16 arcsec, so very close to each other. From the calculated offsets, the map \ref{Fig: occ-Himalia-off03mar} was generated. Notice that the shadow path was not predicted to cross the OPD. This was not necessary for testing the prediction.
 
 \begin{figure*}
 \begin{centering}
