--- a/Irregular-occ/references.bib
+++ b/Irregular-occ/references.bib
@@ -220,6 +220,34 @@ month={May},
 pages={A142}
 }
 
+@Article{deBruijne2012,
+title={Science performance of Gaia, ESA’s space-astrometry mission},
+volume={341},
+url={http://dx.doi.org/10.1007/s10509-012-1019-4},
+DOI={10.1007/s10509-012-1019-4},
+number={1},
+journal={Astrophysics and Space Science},
+publisher={Springer Science + Business Media},
+author={de Bruijne, J. H. J.},
+year={2012},
+month={Mar},
+pages={31–41}
+}
+
+@Article{Jacobson2012,
+title={IRREGULAR SATELLITES OF THE OUTER PLANETS: ORBITAL UNCERTAINTIES AND ASTROMETRIC RECOVERIES IN 2009–2011},
+volume={144},
+url={http://dx.doi.org/10.1088/0004-6256/144/5/132},
+DOI={10.1088/0004-6256/144/5/132},
+number={5},
+journal={The Astronomical Journal},
+publisher={IOP Publishing},
+author={Jacobson, R. and Brozović, M. and Gladman, B. and Alexandersen, M. and Nicholson, P. D. and Veillet, C.},
+year={2012},
+month={Oct},
+pages={132}
+}
+
 @article{Zacharias2013,
 title={THE FOURTH US NAVAL OBSERVATORY CCD ASTROGRAPH CATALOG (UCAC4)},
 volume={145},
