Adicionado figura mapa consertado

--- a/Irregular-occ/Irregular-occ.tex
+++ b/Irregular-occ/Irregular-occ.tex
@@ -298,11 +298,11 @@ Figure \ref{Fig: occ-Himalia}shows four zoomed in occultation maps corresponding
 
 \begin{figure*}
 \begin{centering}
-\subfigure[Nominal prediction]{\includegraphics[scale=0.19]{figures/Himalia1_2015-03-03T00:39:25.png}  \label{Fig: occ-Himalia-nooff}}
-\subfigure[\textcolor{red}{Offset de Himalia a partir do ajuste}]{\includegraphics[scale=0.19]{figures/Himalia2_2015-03-03T00:39:18.png}  \label{Fig: occ-Himalia-ajuste}}
-\subfigure[Observation at February 22 (different FOVs)]{\includegraphics[scale=0.19]{figures/Himalia3_2015-03-03T00:39:40.png}   \label{Fig: occ-Himalia-off22fev}}
-\subfigure[Observation at March 03 (same FOV)]{\includegraphics[scale=0.19]{figures/Himalia4_2015-03-03T00:39:15.png}   \label{Fig: occ-Himalia-off03mar}}
-\caption{Predictions for Himalia: The big red dot show the geocentric closest approach of the shadow. The small red ones are the center of the shadow separated by one minute. The straight lines show the size of the shadow. \ref{Fig: occ-Himalia-nooff} is the map using the nominal positions of the star and satellite. \ref{Fig: occ-Himalia-ajuste} shows the shadow given an estimated offset for the position of Himalia related to the JPL ephemeris obtained in section \ref{Sec: Offset}. In \ref{Fig: occ-Himalia-off22fev} we apply offsets to the positions of star and satellite accordingly the observations made at February 22. \ref{Fig: occ-Himalia-off03mar} is as in \ref{Fig: occ-Himalia-off22fev} but with observations made at March 03 when the objects were close to each other. \textcolor{red}{Figuras ainda serão mudadas. Colocadas para visualização}}
+\subfigure[Nominal prediction]{\includegraphics[width=8.8cm]{figures/Himalia0_2015-03-03T00:39:25.eps}  \label{Fig: occ-Himalia-nooff}}
+\subfigure[\textcolor{red}{Offset de Himalia a partir do ajuste}]{\includegraphics[width=8.8cm]{figures/Himalia2_2015-03-03T00:39:18.png}  \label{Fig: occ-Himalia-ajuste}}
+\subfigure[Observation at February 22 (different FOVs)]{\includegraphics[width=8.8cm]{figures/Himalia3_2015-03-03T00:39:40.png}   \label{Fig: occ-Himalia-off22fev}}
+\subfigure[Observation at March 03 (same FOV)]{\includegraphics[width=8.8cm]{figures/Himalia4_2015-03-03T00:39:15.png}   \label{Fig: occ-Himalia-off03mar}}
+\caption{Predictions for Himalia: The big red dot show the geocentric closest approach of the shadow. The small red ones are the center of the shadow separated by one minute. The straight lines show the size of the shadow. \ref{Fig: occ-Himalia-nooff} is the map using the nominal positions of the star and satellite. \ref{Fig: occ-Himalia-ajuste} shows the shadow given an estimated offset for the position of Himalia related to the JPL ephemeris obtained in section \ref{Sec: Offset}. In \ref{Fig: occ-Himalia-off22fev} we apply offsets to the positions of star and satellite accordingly the observations made at February 22. \ref{Fig: occ-Himalia-off03mar} is as in \ref{Fig: occ-Himalia-off22fev} but with observations made at March 03 when the objects were close to each other. The green dot at the bottom of the maps is the location of Observatório do Pico dos Dias. The black "+" marks at maps (b,c,d) are the nominal prediction closest approach for reference. \textcolor{red}{Figura b será mudada após confirmamos o offset para Himalia}}
 \label{Fig: occ-Himalia}
 \end{centering}
 \end{figure*}
